# htcondor-ce

./: .gitignore  .readthedocs.yaml  .travis.yml  404.html  Bosco_Diagram.md  CE_Diagram.md  CMakeLists.txt  Makefile  Makefile.am  README.md  bootstrap  configure.ac  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: build_and_test_rpms.yml  build_rpms.yaml  build_rpms.yml  deploy-mkdocs.yaml  pylint.yaml  python-linters.yaml  upload_rpms.yaml  validate-mkdocs.yml
architecture/: index.html
batch-system-integration/: index.html
cmake/: FindClassad.cmake
config/: 01-blahp-location.conf  01-ce-audit-payloads-defaults.conf  01-ce-auth-defaults.conf  01-ce-auth-defaults.conf.osg  01-ce-auth.conf  01-ce-auth.conf.osg  01-ce-collector-audit-payload.conf  01-ce-collector-defaults.conf  01-ce-collector-requirements.conf  01-ce-collector.conf  01-ce-info-services-defaults.conf  01-ce-info-services.conf  01-ce-router-defaults.conf  01-ce-router-defaults.conf.in  01-ce-router.conf  01-ce-router.conf.in  01-common-auth-defaults.conf  01-common-auth.conf  01-common-collector-defaults.conf  01-osg.conf  01-pilot-env-defaults.conf  01-pilot-env.conf  02-ce-auth-generated.conf  02-ce-bosco-defaults.conf  02-ce-bosco.conf  02-ce-collector-auth-generated.conf  02-ce-collector-auth.conf  02-ce-condor-defaults.conf  02-ce-condor.conf  02-ce-lsf-defaults.conf  02-ce-lsf.conf  02-ce-pbs-defaults.conf  02-ce-pbs.conf  02-ce-sge-defaults.conf  02-ce-sge.conf  02-ce-slurm-defaults.conf  02-ce-slurm.conf  03-ce-shared-port-defaults.conf  03-ce-shared-port.conf  03-gratia-cleanup.conf  (+41 more)
config/mapfiles.d/: 10-gsi.conf  10-scitokens.conf  10-ssl.conf  50-central-collector.conf  50-common-default.conf  50-gsi-callout.conf  90-ban.conf
config/metrics.d/: 00-example-metrics.conf  00-metrics-defaults.conf
contrib/apelscripts/: 50-ce-apel-defaults.conf  50-ce-apel.conf  50-condor-apel.conf  README.md  accountingRun.sh  apelscripts.conf  condor-ce-apel  condor-ce-apel.cron  condor-ce-apel.service  condor-ce-apel.timer  condor_batch.sh  condor_batch_blah.py  condor_batch_blah.sh  condor_blah.sh  condor_ce_apel.sh  condor_ce_batch.sh  condor_ce_blah.sh  htcondorce.cfg
contrib/bdii/: 50-ce-bdii-defaults.conf  99-ce-bdii.conf  README.md  htcondor-ce-provider
contrib/bosco/: bosco-cluster-remote-hosts.py  bosco-cluster-remote-hosts.sh
docs/: architecture.md  batch-system-integration.md  index.md  installation.md  job-router-recipes.md  job-submission.md  overview.md  pip-requirements.txt  reference.md  releases.md  remote-job-submission.md  troubleshooting.md  verification.md
docs/css/: extra.css  superfences.css
docs/installation/: central-collector.md  htcondor-ce.md
docs/troubleshooting/: logs.md  remote-troubleshooting.md  troubleshooting.md
docs/v23/: releases.md
docs/v24/: releases.md
docs/v25/: releases.md  remote-job-submission.md
docs/v3/: batch-system-integration.md  index.md  job-submission.md  overview.md  releases.md  verification.md
docs/v4/: batch-system-integration.md  index.md  overview.md  releases.md  remote-job-submission.md  verification.md
docs/v5/: batch-system-integration.md  operation.md  overview.md  releases.md  remote-job-submission.md  usage.md  verification.md
docs/v6/: operation.md  releases.md
installation/central-collector/: index.html
installation/hosted-ce/: index.html
installation/htcondor-ce/: index.html
overview/: index.html
overwrite_theme/: main.html
reference/: index.html
releases/: index.html
remote-job-submission/: index.html
rpm/: README.release.md  htcondor-ce.spec
search/: search_index.json
src/: OrderedDict.py  audit_payloads.py  classad_ce.cpp  classad_ce_tester.cpp  collector_to_agis  condor-ce  condor-ce-collector  condor_ce_client_env_bootstrap  condor_ce_config_generator  condor_ce_config_val  condor_ce_create_password  condor_ce_env_bootstrap  condor_ce_generator  condor_ce_history  condor_ce_hold  condor_ce_host_network_check  condor_ce_info_query.py  condor_ce_info_status  condor_ce_job_router_info  condor_ce_job_router_tool  condor_ce_jobmetrics  condor_ce_metric  condor_ce_off  condor_ce_on  condor_ce_ping  condor_ce_q  condor_ce_qedit  condor_ce_reconfig  condor_ce_register  condor_ce_release  condor_ce_reschedule  condor_ce_restart  condor_ce_rm  condor_ce_router_defaults  condor_ce_router_q  condor_ce_run  condor_ce_scitoken_exchange  condor_ce_startup  condor_ce_startup_internal  condor_ce_status  (+18 more)
src/bdii/: condor_ce_bdii_generate_glue1.py  condor_ce_bdii_generate_glue2.py  htcondor-ce-provider
src/htcondor_ce/: rrd.py  web.py
src/htcondorce/: agis_compat.py  audit_payloads.py  info_query.py  registry.py  rrd.py  tools.py  web.py  web_utils.py
templates/: code.html  code_submit.html  code_submit_failure.html  header.html  health.html  index.html  metrics.html  pilots.html  view_base.html  vos.html
tests/: .gitignore  Dockerfile.dev  README.scitokens.md  build_rpms.sh  extattr_table.txt  id_rsa_cibot.enc.htcondor  id_rsa_cibot.enc.matyasselmeci  id_rsa_cibot2.enc.htcondor  id_rsa_cibot2.enc.matyasselmeci  install_rpms.sh  run_tests.py  setup_tests.sh  sftp_upload.sh  test_condor_ce_router_defaults.py  test_inside_docker.sh  test_verify_ce_config.py  uid_table.txt
tests/containers/: README.dev.md
troubleshooting/common-issues/: index.html
troubleshooting/debugging-tools/: index.html
troubleshooting/logs/: index.html
troubleshooting/remote-troubleshooting/: index.html
troubleshooting/troubleshooting/: index.html
v23/operation/: index.html
v23/reference/: index.html
v23/releases/: index.html
v23/remote-job-submission/: index.html
v23/verification/: index.html
v24/operation/: index.html
v24/reference/: index.html
v24/releases/: index.html
v24/remote-job-submission/: index.html
v25/operation/: index.html
v25/reference/: index.html
v25/releases/: index.html
v25/remote-job-submission/: index.html
v3/: index.html
v3/batch-system-integration/: index.html
v3/job-submission/: index.html
v3/overview/: index.html
verification/: index.html
(+195 files in other folders)
